--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "BROWSER='google-chrome' react-scripts start"
+    "start": "BROWSER='google-chrome' react-scripts start",
+    "homepage": "https://AntunesJoao.github.io/portifolio",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -25,4 +29,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
+
 }
