--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -4,14 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "BROWSER='google-chrome' react-scripts start",
-    "homepage": "https://AntunesJoao.github.io/portifolio",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
+  "homepage": "https://AntunesJoao.github.io/portifolio"
 
   },
   "dependencies": {
