--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+   "homepage": "https://AntunesJoao.github.io/Portifolio_",
   "scripts": {
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist",
-  "homepage": "https://AntunesJoao.github.io/portifolio"
-
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
